// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expression with functions 1`] = `
Object {
  "content": "\${function(a){return a*b*c;}(d)}",
  "externalReferences": Array [
    "b",
    "c",
    "d",
  ],
  "tokens": Array [
    Object {
      "end": 33,
      "start": NaN,
      "text": undefined,
    },
  ],
}
`;

exports[`multiple value expressions 1`] = `
Object {
  "content": "abc\${def}ghi\${jkl}",
  "externalReferences": Array [
    "def",
    "jkl",
  ],
  "tokens": Array [
    Object {
      "end": 14,
      "start": NaN,
      "text": undefined,
    },
    Object {
      "end": 19,
      "start": NaN,
      "text": undefined,
    },
  ],
}
`;

exports[`null expression 1`] = `
Object {
  "content": "abc",
  "externalReferences": Array [],
}
`;

exports[`simple value expression 1`] = `
Object {
  "content": "\${abc}",
  "externalReferences": Array [
    "abc",
  ],
  "tokens": Array [
    Object {
      "end": 7,
      "start": NaN,
      "text": undefined,
    },
  ],
}
`;
